# Youtube-Tutorials

./: .gitignore
Deployment/Docker/CounterApp/: ReadMe.md  docker-compose.yml
Deployment/Docker/CounterApp/backend/: Dockerfile  app.py
Deployment/Docker/CounterApp/frontend/: Dockerfile  app.py
Generative AI/1_use_llm/: README.md  main.py  pyproject.toml
Generative AI/2_speech_llm/: ReadMe.md  main.py  pyproject.toml  speech_to_speech.excalidraw
Generative AI/2_speech_llm/agent/: agent_interaction.py  speech_to_text.py  text_to_speech.py
Generative AI/2_speech_llm/fast_api/: rest_app.py
Generative AI/3_RAG_Full/1_Embedding/: text_embedding.ipynb
Generative AI/3_RAG_Full/2_VectorDB/: chroma_db_FAISS.ipynb
Generative AI/3_RAG_Full/2_VectorDB_Caching/: VectorDB.excalidraw  chroma_db_FAISS.ipynb
Generative AI/3_RAG_Full/3_Ranker/: Reranker.excalidraw  chroma_db_FAISS_reranker.ipynb
Generative AI/3_RAG_Full/4_Text_RAG/: Text RAG.excalidraw  text_RAG.ipynb
Generative AI/3_RAG_Full/5_MultiModal_Embedding/: multimodal_embedding.ipynb
